# dist-cli

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
dist_cli/: __main__.py  main.py
dist_cli/project/: create.py
dist_cli/service/: create.py  delete.py  list.py  main.py  rename.py
dist_cli/templates/: Dockerfile-python  microservices.py
dist_cli/utils/: config.py  project.py
