[tool.poetry]
name = "dist-cli"
version = "0.2.0"
description = "A simple interface to manage services and packages."
authors = ["Victoria Luquet <victoria.luquet@gdstecnologia.com.br>"]
readme = "README.md"
keywords = ['cli', 'project management', 'framework']

[tool.poetry.scripts]
dist-cli = "dist_cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
typer = {extras = ["all"], version = "^0.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
